# ai-job-agregator-russia

./: .editorconfig  .env.example  .gitignore  DECISIONS.md  Dockerfile  Makefile  PLAN.md  PROGRESS.md  README.md  TASKS.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: scoring_rules.yaml
src/job_matcher/: __init__.py  cli.py  main.py
src/job_matcher/api/: dependencies.py  router.py
src/job_matcher/api/routes/: health.py  jobs.py
src/job_matcher/collectors/: base.py  demo.py  hh.py  hirify.py  rabota.py  registry.py  superjob.py  telegram.py
src/job_matcher/core/: config.py  constants.py  http.py  logging.py
src/job_matcher/db/: session.py
src/job_matcher/db/migrations/: env.py
src/job_matcher/db/migrations/versions/: 20260324_000001_initial_schema.py  20260324_000002_telegram_source.py
src/job_matcher/mcp/: server.py
src/job_matcher/models/: __init__.py  enums.py  job.py  source.py
src/job_matcher/repositories/: jobs.py  source.py
src/job_matcher/schemas/: api.py  domain.py
src/job_matcher/scoring/: engine.py
src/job_matcher/services/: bootstrap.py  collection_service.py  deduplication.py  job_service.py  notification_service.py  scheduler.py
src/job_matcher/telegram/: bot.py  tdlib_client.py
src/job_matcher/utils/: datetime.py  extraction.py  location.py  text.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_deduplication.py  test_hh_collector.py  test_scoring_engine.py  test_telegram_source.py
